2009-07-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Delete
	new token if it does not match strength criteria.

2009-06-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/yppasswd_xdr.c: Remove unnecessary header files.

	* modules/pam_unix/support.c (_unix_getpwnam): Only compile in NIS
	support if all necessary functions exist.

	* modules/pam_unix/pam_unix_passwd.c (getNISserver): Add debug
	option, handle correct if OS has no NIS support.

	* modules/pam_access/pam_access.c (netgroup_match): Check if
	yp_get_default_domain and innetgr are available at compile time.

	* configure.in: Check for functions: innetgr, getdomainname
	check for headers: rpcsvc/ypclnt.h, rpcsvc/yp_prot.h.

2009-06-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix.8.xml: Fix blowfish description.
	Reported by Diego E. “Flameeyes” Pettenò.

2009-06-26  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_namespace/Makefile.am: Fix make maintainer-clean,
	fix docu dependencies.

	* modules/pam_xauth/Makefile.am: Fix make maintainer-clean.
	* modules/pam_access/Makefile.am: Likewise.
	* modules/pam_debug/Makefile.am: Likewise.
	* modules/pam_deny/Makefile.am: Likewise.
	* modules/pam_echo/Makefile.am: Likewise.
	* modules/pam_env/Makefile.am: Likewise.
	* modules/pam_faildelay/Makefile.am: Likewise.
	* modules/pam_ftp/Makefile.am: Likewise.
	* modules/pam_group/Makefile.am: Likewise.
	* modules/pam_issue/Makefile.am: Likewise.
	* modules/pam_keyinit/Makefile.am: Likewise.
	* modules/pam_lastlog/Makefile.am: Likewise.
	* modules/pam_limits/Makefile.am: Likewise.
	* modules/pam_listfile/Makefile.am: Likewise.
	* modules/pam_localuser/Makefile.am: Likewise.
	* modules/pam_loginuid/Makefile.am: Likewise.
	* modules/pam_mail/Makefile.am: Likewise.
	* modules/pam_mkhomedir/Makefile.am: Likewise.
	* modules/pam_motd/Makefile.am: Likewise.
	* modules/pam_nologin/Makefile.am: Likewise.