@@ -1,3 +1,9 @@
+2009-08-24  Steve Langasek  <vorlon@debian.org>
+
+	* doc/pam_get_authtok.3.xml: grammar fix.
+	* doc/adg/Linux-PAM-ADG.xml: Likewise.
+	* doc/mwg/Linux-PAM_MWG.xml: Likewise.
+
 2009-07-21  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Delete
